fadeInAnimationのパターンを増やした

--- a/fadeInPicture/css/style.css
+++ b/fadeInPicture/css/style.css
@@ -1,7 +1,7 @@
-.gird {
+.grid {
  display: grid;
  gap: 30px;
- grid-template-columns: repeat(auto-fit, minmax(300px, 1tr));
+ grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  max-width: 1020px;
  margin: auto;
  padding: 30px;
