--- a/fasionSite/css/style.css
+++ b/fasionSite/css/style.css
@@ -66,7 +66,8 @@ LAYOUT
 LOADING
 ================================================ */
 #loading {
-    background-color: var(--light-grey);
+    background-color: rgba(238, 221, 136, 1);
+    backdrop-filter: blur(10px);
     position: fixed;
     inset: 0;
     z-index: 9999;
@@ -80,6 +81,11 @@ LOADING
     inset: 0;
     z-index: 9998;
     translate: 0 100vh;
+}
+
+#loading p {
+    font-size: 2rem;
+    font-family: var(--oswald-font);
 }
 
 /*
