--- a/fasionSite/css/style.css
+++ b/fasionSite/css/style.css
@@ -117,6 +117,48 @@ HERO
 }
 
 /*
+GALLERY
+================================================ */
+.gallery {
+    display: flex;
+    flex-direction: column-reverse;
+}
+.gallery-image {
+    width: min(100%, calc(38rem - 2rem));
+    margin: auto;
+    position: relative;
+}
+.gallery-image::after {
+    display: block;
+    content: '';
+    width: calc(100% - 2rem);
+    height: calc(100% - 2.5rem);
+    z-index: 3;
+    border: 3px solid var(--white);
+    top: 1rem;
+    left: 1rem;
+    position: absolute;
+}
+.gallery-image img {
+    aspect-ratio: 3/4;
+    object-fit: cover;
+    width: 100%;
+}
+.gallery-thumbnails {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(5, 1fr);
+    list-style: none;
+    margin: 1rem 0;
+}
+.gallery-thumbnails img {
+    aspect-ratio: 3/4;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+
+/*
 DESKTOP SIZE
 ================================================ */
 @media(min-width: 800px) {
@@ -192,6 +234,5 @@ DESKTOP SIZE
     .shop {
         margin-top: 20rem;
         height: 50rem;
-        
     }
 }
