--- a/fasionSite/css/style.css
+++ b/fasionSite/css/style.css
@@ -217,6 +217,34 @@ GALLERY
     cursor: pointer;
 }
 
+/*
+SHOP INFO
+================================================ */
+.shop {
+    background: url('../images/bg-shop.jpg') no-repeat center top / cover;
+    margin-top: 16rem;
+    position: relative;
+    height: 40rem;
+}
+.shop-content {
+    background: var(--white);
+    padding: 3rem;
+    position: absolute;
+    top: -8rem;
+    width: 90vw;
+    left: 0;
+    right: 0;
+}
+.shop h3 {
+    margin: 1rem 0;
+    padding-top: 2rem;
+    font-weight: normal;
+    border-top: 1px solid var(--light-grey);
+}
+
+/*
+
+
 
 /*
 DESKTOP SIZE
